# note-transcriber

./: .env.example  .gitignore  QUICK_REFERENCE.md  README.md  SPLIT_PATTERN_GUIDE.md  config.py  main.py  pyproject.toml  setup_cli.py
