[project]
name = "image-transcription"
version = "0.1.0"
description = "Batch transcription of handwritten or printed notes using Claude"
readme = "README.md"
authors = [{ name = "Image Transcription Tool" }]
requires-python = ">=3.12"
dependencies = [
    "anthropic",
    "openai",
    "python-dotenv",
    "tqdm",
    "Pillow",
    "pandas",
    "rich",
]

[tool.uv]
dev-dependencies = []
